--- a/src/views/recover.handlebars
+++ b/src/views/recover.handlebars
@@ -1,14 +1,17 @@
 <div>
     <h1>Recover Password</h1>
-    <form action="/api/v1/session/recover" method="POST">
-        <label for="email">Email</label><br>
-        <input type="email" name="email" placeholder="Email" required>
-        <br>
-        <br>
-        <label for="password">New Password</label><br>
-        <input type="password" name="password" placeholder="New Password" required>
-        <br>
-        <br>
-        <button type="submit">Update Password</button>
-    </form>
+    <button><a href="/views/login">Login</a></button>
+    <br>
+    <br>
+    <br>
+    <h2>Enter your email</h2>
+    {{#if error}}
+        <p>{{error}}</p>
+    {{/if}}
+    <input type="text" name="email" id="EmailRecover" placeholder="Email" required>
+    <br>
+    <br>
+    <button type="button" id="recoverSendButton">Send</button>
 </div>
+
+<script src="/js/recover.js"></script>
